fix table content vertical alignment

--- a/assets/css/partner/partner.css
+++ b/assets/css/partner/partner.css
@@ -5,6 +5,7 @@
   width: 200px;
   min-width: -moz-max-content;
   min-width: max-content;
+  vertical-align: baseline;
   font-size: 0.875rem;
   line-height: 1.25;
 }
@@ -46,6 +47,7 @@
   --tw-border-opacity: 1;
   border-color: rgb(163 163 163 / var(--tw-border-opacity));
   padding: 1rem;
+  vertical-align: baseline;
 }
 .product-table tbody tr {
   position: relative;
@@ -144,7 +146,7 @@
 }
 .product-table tbody th table tr th,
 .product-table tbody th table tr td {
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 .product-table tbody th table tr:first-child td:first-of-type {
   border-right-width: 1px !important;
